data/collection/fixes/descriptions/java/JDK-8158559
The fix in changeset http://hg.openjdk.java.net/jdk9/dev/langtools/rev/f7efff50efba is causing build breakage as follows:
/workspace/langtools/make/src/classes/build/tools/symbolgenerator/CreateSymbols.java:730: error: incompatible types: element_value[] cannot be converted to ClassReader
            return new Array_element_value(values, '[');
                                           ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error